--- a/css/maze-search.css
+++ b/css/maze-search.css
@@ -87,6 +87,7 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 8px;
+    align-items: center;
 }
 
 .stat-item:last-child {
@@ -96,11 +97,13 @@
 .stat-label {
     font-weight: 600;
     color: #555;
+    font-size: 0.9em;
 }
 
 .stat-value {
     font-family: monospace;
-    font-size: 1.1em;
+    font-size: 0.9em;
+    color: #8d99ae;
 }
 
 /* Slider value display */
